--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@supabase/supabase-js": "^2.93.3",
     "expo": "~54.0.33",
     "expo-constants": "^18.0.13",
+    "expo-dev-client": "^6.0.20",
     "expo-notifications": "^0.32.16",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.30.0",
+    "react-native-purchases": "^9.7.5",
     "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.20.0",
@@ -29,7 +31,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
+    "typescript": "^5.9.3"
   },
   "private": true
 }
